Add Font ...to be continue

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -12,16 +12,38 @@
 @color3 : #fcac45;
 @color4: #292929;
 @color5 :#111111;
+/* add font here */
 @font-face{
 	font-family: "OpenSans Bold" ;
 	src:url("OpenSans-Bold.ttf") format("truetype");
 }
+@font-face{
+	font-family: "OpenSans ConldBold" ;
+	src:url("OpenSans-CondBold.ttf") format("truetype");
+}
 
-/* Welcome here */
+@font-face{
+	font-family: "OpenSans CondLight" ;
+	src:url("OpenSans-CondLight.ttf") format("truetype");
+}
+
+@font-face{
+	font-family: "OpenSans Italic" ;
+	src:url("OpenSans-Italic.ttf") format("truetype");
+}
+
+@font-face{
+	font-family: "OpenSans Regular" ;
+	src:url("OpenSans-Regular.ttf") format("truetype");
+}
+
+
+
+
 body{
 	// font-family: "OpenSans" ,Sans-serif;
 }
-
+/* Welcome here */
 .wellcome{
 	height: 790px;
 	padding: 45px 0px 60px 0;
@@ -92,7 +114,7 @@ body{
 		}
 	}
 }
-
+/* Header-content here */
 .header-content{
 	span{
 		font-size: 44px;
