--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -516,8 +516,14 @@ body{
    			    margin-bottom: 100px;
 		}
 	}
+	#owl-demo{position: static;}
 	.about-us{
 		height: auto;
+		ul{
+			li{
+				text-align: left;
+			}
+		}
 		.about-us-left{
 			text-align: center;
 			img{
@@ -598,6 +604,11 @@ body{
 	}
 	.about-us{
 		height: auto;
+		ul{
+			li{
+				text-align: left;
+			}
+		}
 		.about-us-left{
 			text-align: center;
 			img{
@@ -622,6 +633,9 @@ body{
 		.services-content{
 			position: static;
 		}
+	}
+	#owl-demo{
+		position: static;
 	}
 	.clients{
 		#owl-demo-2{
